# goshare-rs

./: Cargo.toml  README.md
src/: main.rs
src/adapters/: group_repository.rs  http.rs  mod.rs
src/application/: application.rs  mod.rs
src/domain/: balances.rs  errors.rs  expenses.rs  groups.rs  members.rs  mod.rs
src/repositories/: mod.rs  repositories.rs
